--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "word-list": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
